@@ -1,3 +1,8 @@
+*repositorg-0.1 (19 Jun 2020)
+
+  19 Jun 2020;  <chymera@gentoo.org> +repositorg-0.1.ebuild:
+  app-misc/repositorg: versioned release
+
   11 Jun 2020;  <chymera@gentoo.org> +files/repositorg_uuid.initd,
   repositorg-9999.ebuild:
   app-misc/repositorg: OpenRC script
